--- a/submission.ipynb
+++ b/submission.ipynb
@@ -253,6 +253,22 @@
     "# ================================================================\n",
     "train_dqn(num_episodes=200, batch_size=8, target_update=10)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8fb892a",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "**Best Config:**  \n",
+    "- **Batch:** 8  \n",
+    "- **Update:** 10  \n",
+    "- **Optimizer:** Adam (lr = 1e-4)  \n",
+    "- **Loss:** MSE  \n",
+    "\n",
+    "**Result:**  \n",
+    "Gradual improvement and stable convergence.\n"
+   ]
   }
  ],
  "metadata": {
