Added talking points

--- a/submission.ipynb
+++ b/submission.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fe66c242",
+   "metadata": {},
+   "source": [
+    "##### Jahnavi Pakanati\n",
+    "##### 9013742\n",
+    "##### Assignment-3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08867075",
+   "metadata": {},
+   "source": [
+    "##### This code trains a Deep Q-Network (DQN) to play Pong using a CNN that learns from game frames.  \n",
+    "##### It preprocesses each frame, stores experience in a replay buffer, and uses sampled batches to update the network.  \n",
+    "##### A target network stabilizes learning, while epsilon-greedy controls exploration.  \n",
+    "##### The model trains for 200 episodes and plots the score and average rewards to show learning progress.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "284dbf66",
@@ -268,6 +289,18 @@
     "\n",
     "**Result:**  \n",
     "Gradual improvement and stable convergence.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6abce1f",
+   "metadata": {},
+   "source": [
+    "###   Talking points about DQN training performance on pong\n",
+    "\n",
+    "- The blue line goes up and down a lot, which means the computer is still learning and sometimes plays well, but other times not so well.\n",
+    "- The orange line is smoother and shows the computer’s average score. It stays low, so the computer is not winning yet.\n",
+    "- Even after many tries, both lines stay low, which means the computer still needs more practice to get better at playing Pong.\n"
    ]
   }
  ],
